--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -6,8 +6,7 @@ substitutions:
   _SERVICE_NAME: modal-fastapi-sls-server
   _DEPLOY_REGION: us-central1
   _AR_HOSTNAME: us-central1-docker.pkg.dev
-  _CLUSTER_LOCATION: us-central1
-  _CLUSTER_NAME: modal-fastapi-server
+
 
 steps:
   - name: 'gcr.io/cloud-builders/docker'
@@ -17,80 +16,38 @@ steps:
       - |
         docker build \
           -t $_AR_HOSTNAME/$PROJECT_ID/cloud-run-source-deploy/$REPO_NAME/$_SERVICE_NAME:$COMMIT_SHA \
-          --build-arg TOKEN_ID="$$TOKEN_ID" \
-          --build-arg TOKEN_SECRET="$$TOKEN_SECRET" \
-          --build-arg API_KEY="$$API_KEY" \
-          --build-arg BUCKET_NAME="$$BUCKET_NAME" \
-          --build-arg CLAUDE_API_KEY="$$CLAUDE_API_KEY" \
-          --build-arg DID_KEY="$$DID_KEY" \
-          --build-arg ELEVENLABS_API_KEY="$$ELEVENLABS_API_KEY" \
-          --build-arg GCP_AUTH_PROVIDER_X509_CERT_URL="$$GCP_AUTH_PROVIDER_X509_CERT_URL" \
-          --build-arg GCP_AUTH_URI="$$GCP_AUTH_URI" \
-          --build-arg GCP_CLIENT_EMAIL="$$GCP_CLIENT_EMAIL" \
-          --build-arg GCP_CLIENT_ID="$$GCP_CLIENT_ID" \
-          --build-arg GCP_CLIENT_X509_CERT_URL="$$GCP_CLIENT_X509_CERT_URL" \
-          --build-arg GCP_PRIVATE_KEY="$$GCP_PRIVATE_KEY" \
-          --build-arg GCP_PRIVATE_KEY_ID="$$GCP_PRIVATE_KEY_ID" \
-          --build-arg GCP_PROJECT_ID="$$GCP_PROJECT_ID" \
-          --build-arg GCP_TOKEN_URI="$$GCP_TOKEN_URI" \
-          --build-arg GCP_TYPE="$$GCP_TYPE" \
-          --build-arg GCP_UNIVERSE_DOMAIN="$$GCP_UNIVERSE_DOMAIN" \
-          --build-arg NUM_WORKERS="$$NUM_WORKERS" \
-          --build-arg OPENAI_API_KEY="$$OPENAI_API_KEY" \
-          --build-arg QOLABA_B2B_API_URL="$$QOLABA_B2B_API_URL" \
-          --build-arg SDXL_API_KEY="$$SDXL_API_KEY" \
-          --build-arg ENVIRONMENT="$$ENVIRONMENT" \
-          --build-arg CDN_API="$$CDN_API" \
+          --build-arg TOKEN_ID=$$TOKEN_ID \
+          --build-arg TOKEN_SECRET=$$TOKEN_SECRET \
           .
-    secretEnv:
-      - 'TOKEN_ID'
-      - 'TOKEN_SECRET'
-      - 'API_KEY'
-      - 'BUCKET_NAME'
-      - 'CLAUDE_API_KEY'
-      - 'DID_KEY'
-      - 'ELEVENLABS_API_KEY'
-      - 'GCP_AUTH_PROVIDER_X509_CERT_URL'
-      - 'GCP_AUTH_URI'
-      - 'GCP_CLIENT_EMAIL'
-      - 'GCP_CLIENT_ID'
-      - 'GCP_CLIENT_X509_CERT_URL'
-      - 'GCP_PRIVATE_KEY'
-      - 'GCP_PRIVATE_KEY_ID'
-      - 'GCP_PROJECT_ID'
-      - 'GCP_TOKEN_URI'
-      - 'GCP_TYPE'
-      - 'GCP_UNIVERSE_DOMAIN'
-      - 'NUM_WORKERS'
-      - 'OPENAI_API_KEY'
-      - 'QOLABA_B2B_API_URL'
-      - 'SDXL_API_KEY'
-      - 'ENVIRONMENT'
-      - 'CDN_API'
-
-  - name: 'gcr.io/cloud-builders/docker'
+    secretEnv: ['TOKEN_ID', 'TOKEN_SECRET']
+  
+  - name: gcr.io/cloud-builders/docker
     args:
-      - 'push'
-      - '$_AR_HOSTNAME/$PROJECT_ID/cloud-run-source-deploy/$REPO_NAME/$_SERVICE_NAME:$COMMIT_SHA'
+      - push
+      - >-
+        $_AR_HOSTNAME/$PROJECT_ID/cloud-run-source-deploy/$REPO_NAME/$_SERVICE_NAME:$COMMIT_SHA
     id: Push
-
-  - name: 'gcr.io/cloud-builders/gke-deploy'
-    entrypoint: /bin/sh
+  
+  - name: 'gcr.io/google.com/cloudsdktool/cloud-sdk:slim'
     args:
-    - '-c'
-    - |
-      export _IMAGE_NAME='$_AR_HOSTNAME/$PROJECT_ID/cloud-run-source-deploy/$REPO_NAME/$_SERVICE_NAME:$COMMIT_SHA'
-      envsubst < deployment-service.yaml > deployment-service-mod.yaml
+      - run
+      - services
+      - update
+      - $_SERVICE_NAME
+      - '--platform=managed'
+      - >-
+        --image=$_AR_HOSTNAME/$PROJECT_ID/cloud-run-source-deploy/$REPO_NAME/$_SERVICE_NAME:$COMMIT_SHA
+      - >-
+        --labels=managed-by=gcp-cloud-build-deploy-cloud-run,commit-sha=$COMMIT_SHA,gcb-build-id=$BUILD_ID
+      - '--region=$_DEPLOY_REGION'
+      - '--quiet'
+    id: Deploy
+    entrypoint: gcloud
 
-  - name: 'gcr.io/cloud-builders/gke-deploy'
-    args:
-      - 'run'
-      - '--filename=deployment-service-mod.yaml'
-      - '--location=${_CLUSTER_LOCATION}'
-      - '--cluster=${_CLUSTER_NAME}'
 
 images:
-  - '$_AR_HOSTNAME/$PROJECT_ID/cloud-run-source-deploy/$REPO_NAME/$_SERVICE_NAME:$COMMIT_SHA'
+  - >-
+    $_AR_HOSTNAME/$PROJECT_ID/cloud-run-source-deploy/$REPO_NAME/$_SERVICE_NAME:$COMMIT_SHA
 
 availableSecrets:
   secretManager:
@@ -98,47 +55,8 @@ availableSecrets:
       env: 'TOKEN_ID'
     - versionName: projects/$PROJECT_ID/secrets/TOKEN_SECRET/versions/latest
       env: 'TOKEN_SECRET'
-    - versionName: projects/$PROJECT_ID/secrets/API_KEY/versions/latest
-      env: 'API_KEY'
-    - versionName: projects/$PROJECT_ID/secrets/BUCKET_NAME/versions/latest
-      env: 'BUCKET_NAME'
-    - versionName: projects/$PROJECT_ID/secrets/CLAUDE_API_KEY/versions/latest
-      env: 'CLAUDE_API_KEY'
-    - versionName: projects/$PROJECT_ID/secrets/DID_KEY/versions/latest
-      env: 'DID_KEY'
-    - versionName: projects/$PROJECT_ID/secrets/ELEVENLABS_API_KEY/versions/latest
-      env: 'ELEVENLABS_API_KEY'
-    - versionName: projects/$PROJECT_ID/secrets/GCP_AUTH_PROVIDER_X509_CERT_URL/versions/latest
-      env: 'GCP_AUTH_PROVIDER_X509_CERT_URL'
-    - versionName: projects/$PROJECT_ID/secrets/GCP_AUTH_URI/versions/latest
-      env: 'GCP_AUTH_URI'
-    - versionName: projects/$PROJECT_ID/secrets/GCP_CLIENT_EMAIL/versions/latest
-      env: 'GCP_CLIENT_EMAIL'
-    - versionName: projects/$PROJECT_ID/secrets/GCP_CLIENT_ID/versions/latest
-      env: 'GCP_CLIENT_ID'
-    - versionName: projects/$PROJECT_ID/secrets/GCP_CLIENT_X509_CERT_URL/versions/latest
-      env: 'GCP_CLIENT_X509_CERT_URL'
-    - versionName: projects/$PROJECT_ID/secrets/GCP_PRIVATE_KEY/versions/latest
-      env: 'GCP_PRIVATE_KEY'
-    - versionName: projects/$PROJECT_ID/secrets/GCP_PRIVATE_KEY_ID/versions/latest
-      env: 'GCP_PRIVATE_KEY_ID'
-    - versionName: projects/$PROJECT_ID/secrets/GCP_PROJECT_ID/versions/latest
-      env: 'GCP_PROJECT_ID'
-    - versionName: projects/$PROJECT_ID/secrets/GCP_TOKEN_URI/versions/latest
-      env: 'GCP_TOKEN_URI'
-    - versionName: projects/$PROJECT_ID/secrets/GCP_TYPE/versions/latest
-      env: 'GCP_TYPE'
-    - versionName: projects/$PROJECT_ID/secrets/GCP_UNIVERSE_DOMAIN/versions/latest
-      env: 'GCP_UNIVERSE_DOMAIN'
-    - versionName: projects/$PROJECT_ID/secrets/NUM_WORKERS/versions/latest
-      env: 'NUM_WORKERS'
-    - versionName: projects/$PROJECT_ID/secrets/OPENAI_API_KEY/versions/latest
-      env: 'OPENAI_API_KEY'
-    - versionName: projects/$PROJECT_ID/secrets/QOLABA_B2B_API_URL/versions/latest
-      env: 'QOLABA_B2B_API_URL'
-    - versionName: projects/$PROJECT_ID/secrets/SDXL_API_KEY/versions/latest
-      env: 'SDXL_API_KEY'
-    - versionName: projects/$PROJECT_ID/secrets/environment_dev/versions/latest
-      env: 'ENVIRONMENT'
-    - versionName: projects/$PROJECT_ID/secrets/CDN_API/versions/latest
-      env: 'CDN_API'
+
+
+
+
+
