--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -61,6 +61,8 @@ steps:
         gcloud secrets versions access $$_SECRET_ALIAS --secret="IDEOGRAM_API_KEY" > /workspace/IDEOGRAM_API_KEY.txt
         gcloud secrets versions access $$_SECRET_ALIAS --secret="LEONARDO_API_KEY" > /workspace/LEONARDO_API_KEY.txt
         gcloud secrets versions access $$_SECRET_ALIAS --secret="AILAB_API_KEY" > /workspace/AILAB_API_KEY.txt
+        gcloud secrets versions access $$_SECRET_ALIAS --secret="RUNWAY_API_KEY" > /workspace/RUNWAY_API_KEY.txt
+        gcloud secrets versions access $$_SECRET_ALIAS --secret="LUMAAI_API_KEY" > /workspace/LUMAAI_API_KEY.txt
 
   - name: 'gcr.io/cloud-builders/docker'
     entrypoint: 'bash'
@@ -99,6 +101,8 @@ steps:
           --build-arg IDEOGRAM_API_KEY="$(cat /workspace/IDEOGRAM_API_KEY.txt)" \
           --build-arg LEONARDO_API_KEY="$(cat /workspace/LEONARDO_API_KEY.txt)" \
           --build-arg AILAB_API_KEY="$(cat /workspace/AILAB_API_KEY.txt)" \
+          --build-arg RUNWAY_API_KEY="$(cat /workspace/RUNWAY_API_KEY.txt)" \
+          --build-arg LUMAAI_API_KEY="$(cat /workspace/LUMAAI_API_KEY.txt)" \
           .
   
   - name: gcr.io/cloud-builders/docker
