--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -63,6 +63,7 @@ steps:
         gcloud secrets versions access $$_SECRET_ALIAS --secret="AILAB_API_KEY" > /workspace/AILAB_API_KEY.txt
         gcloud secrets versions access $$_SECRET_ALIAS --secret="RUNWAY_API_KEY" > /workspace/RUNWAY_API_KEY.txt
         gcloud secrets versions access $$_SECRET_ALIAS --secret="LUMAAI_API_KEY" > /workspace/LUMAAI_API_KEY.txt
+        gcloud secrets versions access $$_SECRET_ALIAS --secret="DEEPGRAP_API_KEY" > /workspace/DEEPGRAP_API_KEY.txt
 
   - name: 'gcr.io/cloud-builders/docker'
     entrypoint: 'bash'
@@ -103,6 +104,7 @@ steps:
           --build-arg AILAB_API_KEY="$(cat /workspace/AILAB_API_KEY.txt)" \
           --build-arg RUNWAY_API_KEY="$(cat /workspace/RUNWAY_API_KEY.txt)" \
           --build-arg LUMAAI_API_KEY="$(cat /workspace/LUMAAI_API_KEY.txt)" \
+          --build-arg DEEPGRAP_API_KEY="$(cat /workspace/DEEPGRAP_API_KEY.txt)" \
           .
   
   - name: gcr.io/cloud-builders/docker
